--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,41 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
+}
+
+.custom-carousel-caption {
+	position: absolute;
+	bottom: -35px;
+	left: 0;
+	width: 100%;
+	transform: translateY(-50%);
+	background-color: rgba(
+		0,
+		0,
+		0,
+		0.5
+	); /* Optional: Adds a semi-transparent background */
+	padding: 10px;
+	text-align: center;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+	/* background-color: darkblue; Customize button background color */
+	border-radius: 50%;
+	padding: 10px;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+	width: 5%;
 }
